make sure the link to the menu has a z-index higher than the decorations of the page that may overlap its position (in the wait state for instance)

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -56,6 +56,7 @@ body {
     width: 118px;
     left: 650px;
     top: 10px;
+    z-index: 10;
     background: transparent url('images/lobby_off.png') no-repeat left top;
 }
 
